--- a/includes/logger.yaml
+++ b/includes/logger.yaml
@@ -11,22 +11,22 @@
 ### https://www.home-assistant.io/integrations/logger/
 default: warning #fatal #critical
 logs:
-  custom_components.kef_custom: debug
-  custom_components.aiokef: debug
-  aiokef: debug
-  homeassistant.component.opentherm_gw: debug
-  pyotgw: debug
-  homeassistant.components.shell_command: debug
+  #custom_components.kef_custom: debug
+  #custom_components.aiokef: debug
+  #aiokef: debug
+  #homeassistant.component.opentherm_gw: debug
+  #pyotgw: debug
+  #homeassistant.components.shell_command: debug
   homeassistant.loader: error
   
   # log level for all python scripts
-  homeassistant.helpers.script: debug
-  homeassistant.components.python_script: warning
+  #homeassistant.helpers.script: debug
+  #homeassistant.components.python_script: warning
 
   # debug zeroconf
-  homeassistant.components.zeroconf: debug
+  #homeassistant.components.zeroconf: debug
 
   # https://github.com/home-assistant/core/issues/42555#issuecomment-719922665
-  homeassistant.components.synology_dsm: debug
+  #homeassistant.components.synology_dsm: debug
 
   custom_components.localtuya: warning
