--- a/packages/surepetcare_shell_cmds.yaml
+++ b/packages/surepetcare_shell_cmds.yaml
@@ -1,130 +1,130 @@
----
-## Inputs
-input_select:
-  surepet_door_lock_state_num:
-    name: Select Pet Door mode
-    options:
-      - "0"
-      - "1"
-      - "2"
-      - "3"
-
-input_boolean:
-  petdoor_mode_unlocked:
-    name: Pet Door Unlocked
-    icon: mdi:door-open
-  
-  petdoor_mode_locked_in:
-    name: Pet Door Locked In
-    icon: mdi:door-closed
-  
-  petdoor_mode_locked_out:
-    name: Pet Door Locked Out
-    icon: mdi:door-closed
-  
-  petdoor_mode_locked_all:
-    name: Pet Door Locked All
-    icon: mdi:door-closed
-
-  manage_pet_door:
-    name: Manage Pet Door
-
-input_datetime:
-  surepet_door_lock_time:
-    name: Lock PetDoor
-    has_date: false
-    has_time: true
-
-  surepet_door_unlock_time:
-    name: Unlock PetDoor
-    has_date: false
-    has_time: true
-
-
-## Shell commands
-shell_command:
-  # See link on how to pass !secret to shell_command
-  # https://community.home-assistant.io/t/using-secrets-yaml-with-shell-commands/4478/11
-  surepet_cli_auth: '/config/sure_petcare/sp_cli.py --update -e {{ user }} -p {{ pass }}'
-  surepet_cli_list_flaps: '/config/sure_petcare/sp_cli.py ls_flaps'
-  surepet_cli_set_door_lock: /config/sure_petcare/sp_cli.py set_flap_lock {{ flap_id }} {{ states('input_select.surepet_door_lock_state_num')|int }}
-
-## Automations
-automation:
-  ### Number to shell_script
-  - alias: run_set_surepet_door_lock
-    trigger:
-      platform: state
-      entity_id: input_select.surepet_door_lock_state_num
-    action:
-      service: shell_command.surepet_cli_set_door_lock
-      data:
-        flap_id: !secret surepetcare_kitchen_flap_id
-  
-  ### card select then unselect any other
-  - alias: Pet Door Mode set bools
-    trigger:
-      platform: state
-      entity_id: input_boolean.petdoor_mode_unlocked,
-                 input_boolean.petdoor_mode_locked_in,
-                 input_boolean.petdoor_mode_locked_out, 
-                 input_boolean.petdoor_mode_locked_all
-      to: 'on'
-    action:
-      - service: input_boolean.turn_off
-        data_template:
-          entity_id: >
-            {% set booleans = [ 'input_boolean.petdoor_mode_unlocked', 'input_boolean.petdoor_mode_locked_in', 'input_boolean.petdoor_mode_locked_out',   'input_boolean.petdoor_mode_locked_all' ] | reject('equalto', trigger.entity_id) %}
-            {{ booleans | list | join(', ') }}
-      - service: input_select.select_option
-        data_template: 
-          entity_id: input_select.surepet_door_lock_state_num
-          option: >
-            {% if trigger.entity_id == 'input_boolean.petdoor_mode_unlocked' %}
-              0
-            {% elif trigger.entity_id == 'input_boolean.petdoor_mode_locked_in' %}
-              1
-            {% elif trigger.entity_id == 'input_boolean.petdoor_mode_locked_out' %}
-              2
-            {% elif trigger.entity_id == 'input_boolean.petdoor_mode_locked_all' %}
-              3
-            {% endif %}
-
-  ### Authenicate on HA start up (update on supervisor/docker means auth token lost)
-  - alias: run_set_surepet_cli_auth_at_start
-    trigger:
-      - platform: homeassistant
-        event: start
-    action:
-      service: shell_command.surepet_cli_auth
-      data:
-        user: !secret surepetcareemail
-        pass: !secret surepetcarepw
-
-  ### Lock at input time
-  - alias: run_set_surepet_door_lock_at_input_time
-    trigger:
-      platform: template
-      value_template: "{{ states('sensor.time') == (state_attr('input_datetime.surepet_door_lock_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
-    condition:
-      condition: state
-      entity_id: input_boolean.manage_pet_door
-      state: 'on'
-    action:
-      - service: input_boolean.turn_on
-        data:
-          entity_id: input_boolean.petdoor_mode_locked_out
-
-  ### Unlock at input time
-  - alias: run_set_surepet_door_unlock_at_input_time
-    trigger:
-      platform: template
-      value_template: "{{ states('sensor.time') == (state_attr('input_datetime.surepet_door_unlock_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
-    condition:
-      condition: state
-      entity_id: input_boolean.manage_pet_door
-      state: 'on'
-    action:
-      - service: input_boolean.turn_on
-        data:
-          entity_id: input_boolean.petdoor_mode_unlocked
+#---
+### Inputs
+#input_select:
+#  surepet_door_lock_state_num:
+#    name: Select Pet Door mode
+#    options:
+#      - "0"
+#      - "1"
+#      - "2"
+#      - "3"
+#
+#input_boolean:
+#  petdoor_mode_unlocked:
+#    name: Pet Door Unlocked
+#    icon: mdi:door-open
+#  
+#  petdoor_mode_locked_in:
+#    name: Pet Door Locked In
+#    icon: mdi:door-closed
+#  
+#  petdoor_mode_locked_out:
+#    name: Pet Door Locked Out
+#    icon: mdi:door-closed
+#  
+#  petdoor_mode_locked_all:
+#    name: Pet Door Locked All
+#    icon: mdi:door-closed
+#
+#  manage_pet_door:
+#    name: Manage Pet Door
+#
+#input_datetime:
+#  surepet_door_lock_time:
+#    name: Lock PetDoor
+#    has_date: false
+#    has_time: true
+#
+#  surepet_door_unlock_time:
+#    name: Unlock PetDoor
+#    has_date: false
+#    has_time: true
+#
+#
+### Shell commands
+#shell_command:
+#  # See link on how to pass !secret to shell_command
+#  # https://community.home-assistant.io/t/using-secrets-yaml-with-shell-commands/4478/11
+#  surepet_cli_auth: '/config/sure_petcare/sp_cli.py --update -e {{ user }} -p {{ pass }}'
+#  surepet_cli_list_flaps: '/config/sure_petcare/sp_cli.py ls_flaps'
+#  surepet_cli_set_door_lock: /config/sure_petcare/sp_cli.py set_flap_lock {{ flap_id }} {{ states('input_select.surepet_door_lock_state_num')|int }}
+#
+### Automations
+#automation:
+#  ### Number to shell_script
+#  - alias: run_set_surepet_door_lock
+#    trigger:
+#      platform: state
+#      entity_id: input_select.surepet_door_lock_state_num
+#    action:
+#      service: shell_command.surepet_cli_set_door_lock
+#      data:
+#        flap_id: !secret surepetcare_kitchen_flap_id
+#  
+#  ### card select then unselect any other
+#  - alias: Pet Door Mode set bools
+#    trigger:
+#      platform: state
+#      entity_id: input_boolean.petdoor_mode_unlocked,
+#                 input_boolean.petdoor_mode_locked_in,
+#                 input_boolean.petdoor_mode_locked_out, 
+#                 input_boolean.petdoor_mode_locked_all
+#      to: 'on'
+#    action:
+#      - service: input_boolean.turn_off
+#        data_template:
+#          entity_id: >
+#            {% set booleans = [ 'input_boolean.petdoor_mode_unlocked', 'input_boolean.petdoor_mode_locked_in', 'input_boolean.petdoor_mode_locked_out',   'input_boolean.#petdoor_mode_locked_all' ] | reject('equalto', trigger.entity_id) %}
+#            {{ booleans | list | join(', ') }}
+#      - service: input_select.select_option
+#        data_template: 
+#          entity_id: input_select.surepet_door_lock_state_num
+#          option: >
+#            {% if trigger.entity_id == 'input_boolean.petdoor_mode_unlocked' %}
+#              0
+#            {% elif trigger.entity_id == 'input_boolean.petdoor_mode_locked_in' %}
+#              1
+#            {% elif trigger.entity_id == 'input_boolean.petdoor_mode_locked_out' %}
+#              2
+#            {% elif trigger.entity_id == 'input_boolean.petdoor_mode_locked_all' %}
+#              3
+#            {% endif %}
+#
+#  ### Authenicate on HA start up (update on supervisor/docker means auth token lost)
+#  - alias: run_set_surepet_cli_auth_at_start
+#    trigger:
+#      - platform: homeassistant
+#        event: start
+#    action:
+#      service: shell_command.surepet_cli_auth
+#      data:
+#        user: !secret surepetcareemail
+#        pass: !secret surepetcarepw
+#
+#  ### Lock at input time
+#  - alias: run_set_surepet_door_lock_at_input_time
+#    trigger:
+#      platform: template
+#      value_template: "{{ states('sensor.time') == (state_attr('input_datetime.surepet_door_lock_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
+#    condition:
+#      condition: state
+#      entity_id: input_boolean.manage_pet_door
+#      state: 'on'
+#    action:
+#      - service: input_boolean.turn_on
+#        data:
+#          entity_id: input_boolean.petdoor_mode_locked_out
+#
+#  ### Unlock at input time
+#  - alias: run_set_surepet_door_unlock_at_input_time
+#    trigger:
+#      platform: template
+#      value_template: "{{ states('sensor.time') == (state_attr('input_datetime.surepet_door_unlock_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
+#    condition:
+#      condition: state
+#      entity_id: input_boolean.manage_pet_door
+#      state: 'on'
+#    action:
+#      - service: input_boolean.turn_on
+#        data:
+#          entity_id: input_boolean.petdoor_mode_unlocked
